# aegis_gym

./: .codespell-ignore-words  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue_template.yaml
.github/workflows/: ci.yaml  ci.yml  integration-test.yaml  pr-checklist.yaml  pre-commit.yaml
aegis_gym/: __init__.py  register_envs.py  ros_interface.py  ros_interface_mock.py  utils.py
aegis_gym/envs/: __init__.py  aegis_grasp.py  aegis_pusher.py  aegis_reacher.py  env_types.py  ros_interface.py  ros_interface_mock.py
aegis_gym/envs/legacy/: aegis_pusher.py  aegis_reacher.py
aegis_gym/robot/: __init__.py  robot_commander.py  robot_commander_factory.py  robot_commander_interface.py  robot_commander_mock.py  robot_commander_ros.py  ros_interface.py  ros_interface_factory.py  ros_interface_mock.py
aegis_gym/ros/: __init__.py  base_ros_interface.py  robot_commander_ros.py  ros_interface.py  ros_interface_factory.py  scene_director_ros.py  scene_entities_ros.py
aegis_gym/rsl/: README.md  bc_encoders.py  bc_fusions.py  behavior_cloning.py  grasp_cfgs.py  grasp_env.py  grasp_eval.py  grasp_force_sim_vis.py  grasp_train.py  hpo.py  manipulator.py  manipulator_ros.py  utils.py
aegis_gym/rsl/config/: __init__.py  args_parser.py  config_manager.py
aegis_gym/rsl/config_types/: __init__.py  base_cfg.py  bc.py  debug.py  domain_randomization.py  env.py  grasp_cfg.py  logger.py  robot.py
aegis_gym/rsl/envs/: __init__.py  base_env.py  grasp_env.py  grasp_env_ros.py  manipulator.py  manipulator_ros.py  plotjuggler_udp.py  reacher_env.py  utils.py
aegis_gym/rsl/test/: config_test.py
aegis_gym/scene/: __init__.py  robot_commander_interface.py  robot_commander_mock.py  scene_director_factory.py  scene_director_interface.py  scene_director_mock.py  scene_entities.py
aegis_gym/sim/: __init__.py  sim_manager_interface.py  utils.py  utils_ros.py
aegis_gym/sim/genesis/: __init__.py  genesis_commander.py  manipulator.py  robot_commander_genesis.py  robots_commander_genesis.py  scene_director_genesis.py  (+2 more)
aegis_reacher/: aegis_reacher_env.py
container/: CHANGELOG.md  Containerfile  README.md  build.sh  container-compose.yaml
log/: latest_build
test/: env_test.py  import_test.py  run_train.bash  sb3_run_train.py
utils/: README.md  clearml_enquee_tasks.py  clearml_enqueue_eval_tasks.py  clearml_enqueue_tasks.py  clearml_exp_plotter.py  clearml_summarize.py  clearml_summarizer.py  enquee_tasks.py  pipeline_test.py  upload_urdf_to_clearml.py
utils/helpers/: cli.py  data_getter.py  logging.py  logging_formatter.py  summarizer.py
(+32 files in other folders)
