[tool.poetry]
name = "aegis_gym"
version = "0.0.1"
description = "The collection of gymnasium environments for the Aegis UR5e station."
authors = ["AGH Center of Excellence in Artificial Intelligence <ceai@agh.edu.pl>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
clearml = "^2.1.3"
gymnasium = "^1.2.0,<1.3.0"
natsort = "^8.4.0"
# numpy = ">=1.26.4,<2.0.0"
strenum = "^0.4.15"
torch = "^2.8.0,<2.9.0"
torchvision = "^0.23.0,<0.24.0"

# RSL_RL
rsl-rl-lib = "3.3.0"
tensorboard = "^2.20.0"
colorama = "^0.4.6"

genesis-world = {version = "^0.3.3,<0.4.0", optional = true}
pymeshlab = {version = "^2023.12.post3,<2024", optional = true}

[tool.poetry.extras]
sim-genesis = ["genesis-world", "pymeshlab"]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-randomly = "^3.16.0"
pyyaml = "^6.0.2"
lark = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
