[project]
name = "aegis_gym"
version = "0.0.1"
description = "The collection of gymnasium environments for the Aegis UR5e station."
authors = [
    { name = "AGH Center of Excellence in Artificial Intelligence", email = "ceai@agh.edu.pl" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "clearml>=2.1.3",
    "requests>=2.32.5",
    "gymnasium>=1.2.0,<1.3.0",
    "natsort>=8.4.0",
    "strenum>=0.4.15",
    "torch>=2.8.0,<2.9.0",
    "torchvision>=0.23.0,<0.24.0",
    "rsl-rl-lib>=3.3.0,<4",
    "tensorboard>=2.20.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
sim-genesis = [
    "genesis-world>=0.3.3,<0.4.0",
    "pymeshlab>=2023.12.post3,<2024",
]
test = [
    "pytest>=8.4.0",
    "pytest-randomly>=3.16.0",
    "pyyaml>=6.0.2",
    "lark>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Optional: configure uv-specific settings here
